[tool.poetry]
name = "mycheatsheet_mkdocs"
version = "0.1.0"
description = "Documentation site powered by Zensical"
authors = ["Kotaro Yoshimoto <pythagora.yoshimoto@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
zensical = "*"
pymdown-extensions = "*"
mdx_truly_sane_lists = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
