[project]
name = "mycheatsheet_mkdocs"
version = "0.1.0"
description = "Documentation site powered by Zensical"
authors = [
    {name = "Kotaro Yoshimoto", email = "pythagora.yoshimoto@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "zensical",
    "pymdown-extensions",
    "mdx_truly_sane_lists",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
